# bazel6-ws-mod-selenium

./: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE
cpp_app/: BUILD.bazel  hello.cpp
haskell/: BUILD.bazel  Main.hs
java_app/: App.java  BUILD.bazel
